<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.moataz.todos.ui.viewmodel.HabitsViewModel" />

        <variable
            name="habitType"
            type="com.moataz.todos.ui.viewmodel.utils.HabitType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_50"
        tools:context=".habits.presentation.view.fragment.HabitsFragment"
        tools:ignore="RtlHardcoded">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F8F8F8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_bold"
                android:text="@string/habits"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button_add_new_habit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/circle_button_style"
                android:contentDescription="@string/add_new_habit"
                android:onClick="@{() -> viewModel.onAddHabitClicked()}"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add" />
        </com.google.android.material.appbar.MaterialToolbar>

        <HorizontalScrollView
            android:id="@+id/horizontal_chips_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:overScrollMode="never"
            android:paddingHorizontal="8dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                style="@style/Widget.Material3.Chip.Suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@+id/spirituality_chip"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/spirituality_chip"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onChipTypeClicked(habitType.SPIRITUALITY)}"
                    android:text="@string/spirituality_chip"
                    app:chipStrokeColor="@android:color/transparent" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/mentality_chip"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onChipTypeClicked(habitType.MENTALITY)}"
                    android:text="@string/mentality_chip"
                    app:chipStrokeColor="@android:color/transparent" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/physical_chip"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onChipTypeClicked(habitType.PHYSICAL)}"
                    android:text="@string/physical_chip"
                    app:chipStrokeColor="@android:color/transparent" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/personality_chip"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onChipTypeClicked(habitType.PERSONALITY)}"
                    android:text="@string/personality_chip"
                    app:chipStrokeColor="@android:color/transparent" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/habits_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_chips_scroll_view"
            app:showIfTrue="@{viewModel.habitsUIState.successful}"
            tools:listitem="@layout/item_habit" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showIfTrue="@{viewModel.habitsUIState.loading}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>